// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductCard /> Tests should increment the counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    Increment
  </button>
</div>
`;

exports[`<ProductCard /> Tests should render correctly 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product children
  </h1>
</div>
`;
